# ep-s20-otbr

./: .gitmodules  README.md  install.sh
.github/workflows/: release.yml
s20-otbr/: .gitignore  CMakeLists.txt  openthread-custom-feature.h  partitions.csv  sdkconfig.defaults  sdkconfig.defaults_old
s20-otbr/components/esp_ot_br_server/: CMakeLists.txt
s20-otbr/components/esp_ot_br_server/frontend/: about.html  addresses.html  advanced.html  commission.html  index.html  logs.html  mesh.html  network.html  ota.html  tools.html  topology.html  wifi_configuration.html
s20-otbr/components/esp_ot_br_server/frontend/static/: api.js  style.css
s20-otbr/components/esp_ot_br_server/include/: esp_br_web.h
s20-otbr/components/esp_ot_br_server/private_include/: esp_br_web_api.h  esp_br_web_base.h
s20-otbr/components/esp_ot_br_server/src/: esp_br_web.c  esp_br_web_api.c  esp_br_web_base.c  esp_br_wifi_config.c
s20-otbr/components/nvs_config/include/: nvs_config.h
s20-otbr/main/: CMakeLists.txt  Kconfig.projbuild  esp_ot_br.c  esp_ot_config.h  health_monitor.c  health_monitor.h  idf_component.yml  led.c  led.h
s20-otbr/script/: ci_build  ci_build.sh  push_update.sh
utils/: setup-wsl.sh
